# veri_anon_vote

./: Cargo.toml  FAQ-zh.md  README-zh.md  README.md  veri_anon_vote_server.torrc
crates/alloy_key_ring/: Cargo.toml
crates/alloy_key_ring/src/: lib.rs
crates/alloy_key_ring/src/prelude/: eth.rs  mod.rs
crates/alloy_key_ring/src/wallet/: mod.rs  sig_to_sk.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/src/prelude/: client.rs  mod.rs  scalar.rs  server.rs  tui.rs
crates/common_core/: Cargo.toml
crates/common_core/i18n/: en-US.ftl  zh-CN.ftl
crates/common_core/src/: lib.rs  local_date_time.rs
crates/common_core/src/prelude/: http_client.rs  mod.rs  scalar.rs
crates/election_organizer/: Cargo.toml  config.toml
crates/election_organizer/src/: lib.rs  main.rs  migrations.rs  prelude.rs
crates/election_organizer/src/handlers/admin/: mod.rs
crates/election_organizer/src/handlers/public/: mod.rs
crates/election_shared/: Cargo.toml
crates/election_shared/migrations/2025-03-26-115006_voter_record/: down.sql  up.sql
crates/election_shared/src/: config.rs  lib.rs  schema.rs
crates/election_shared/src/models/: mod.rs  vote_record.rs
crates/election_shared/src/prelude/: mod.rs
crates/veri_anon_vote_server/: Cargo.toml  config.toml
crates/veri_anon_vote_server/src/: lib.rs  main.rs  migrations.rs  prelude.rs
crates/verifier_core/: Cargo.toml
crates/verifier_core/src/: api_client.rs  lib.rs  main.rs  prelude.rs
crates/voter_core/: Cargo.toml
crates/voter_core/src/: api_client.rs  lib.rs  prelude.rs
crates/voter_registrar/: Cargo.toml  config.toml
crates/voter_registrar/src/: config.rs  lib.rs  main.rs  migrations.rs  prelude.rs
crates/voter_registrar/src/handlers/: mod.rs
crates/voter_registrar/src/handlers/admin/: mod.rs
crates/voter_registrar/src/handlers/public/: mod.rs
crates/voter_registrar/src/handlers/verifier/: mod.rs
crates/voter_registration_shared/: Cargo.toml
crates/voter_registration_shared/migrations/2025-03-16-000347_verifier/: down.sql  up.sql
crates/voter_registration_shared/migrations/2025-03-16-222820_voter/: down.sql  up.sql
crates/voter_registration_shared/src/: lib.rs  schema.rs  verifier_sig.rs
crates/voter_registration_shared/src/models/: mod.rs  verifier.rs  voter.rs
crates/voter_registration_shared/src/prelude/: diesel_sqlite.rs  mod.rs
crates/voter_web/: Cargo.toml  Dioxus.toml  build.rs
crates/voter_web/assets/: main.css
crates/voter_web/src/: api.rs  app.rs  crypto_placeholders.rs  lib.rs  main.rs  prelude.rs  state.rs
crates/voter_web/src/components/: bottom_nav.rs  log_view.rs  main_key_view.rs  mod.rs  sign_view.rs  sub_key_view.rs
