[package]
name = "alloy_key_ring"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
edition.workspace = true

[dependencies]
common_core = { path = "../common_core", default-features = false, features = ["wasm"] }
alloy = { version = "0.12.6", default-features = false, features = ["signer-mnemonic"] }
tokio = { version = "1.44.1", features = ["tokio-macros", "tracing", "sync" ] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
derive_builder = "0.20.2"

[features]
default = ["scalar"]
scalar = ["common_core/scalar"]
curve25519-dalek = ["common_core/curve25519-dalek"]
trezor = ["alloy/signer-trezor"]
# wasm = ["wasm-bindgen"]
