[package]
name = "common_core"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
edition.workspace = true

[dependencies]
curve25519-dalek = { version = "4", optional = true, default-features = false }
anyhow = { version = "1.0.97", features = ["backtrace", "std"] }
bs58 = "0.5.1"
chrono = { version = "0.4.40", features = ["serde"] }
dashmap = { version = "6.1.0", features = ["serde"] }
derive_builder = "0.20.2"
derive_more = { version = "2.0.1", features = ["debug", "display", "error", "from", "from_str"] }
hex = { version = "0.4.3", features = ["serde"] }
passwords = "3.1.16"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
nazgul = "2.1.0"
sha3 = "0.10.8"
serde_json = "1.0.140"
strum_macros = "0.27.1"
futures = "0.3.31"
color-eyre = "0.6.3"
diesel = { version = "2.2.8", features = ["sqlite", "r2d2"], optional = true }
reqwest = { version = "0.12.15", default-features = false, features = ["zstd", "json", "socks"] }
reqwest-middleware = { version = "0.4.1", features = ["json", "rustls-tls"] }
reqwest-retry = "0.7.0"
reqwest-tracing = "0.5.6"
url = "2.5.4"
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v4", "js"] }
async-trait = "0.1.88"
tokio = { version = "1.44.2", default-features = false, features = ["sync", "macros", "io-util", "rt", "time"] }
cfg-if = "1.0.0"
base64 = "0.22.1"
qrcode = "0.14.1"
image = "0.25.6"
unic-langid = { version = "0.9.5", features = ["unic-langid-macros"] }

[features]
default = [ "scalar", "diesel" ]
scalar = ["curve25519-dalek"]
curve25519-dalek = ["dep:curve25519-dalek"]
wasm = []
