[package]
name = "voter_registrar"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
voter_registration_shared = { path = "../voter_registration_shared" }
alloy_key_ring = { path = "../alloy_key_ring" }
common_core = { path = "../common_core" }
actix-web = "4.10.2"
anyhow = { version = "1.0.97", features = ["backtrace"] }
derive_builder = "0.20.2"
diesel = { version = "2.2.8", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["macros"] }
hex = { version = "0.4.3", features = ["serde"] }
tracing = "0.1.41"
